# troitsa-lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: language.md
examples/: 01_hello_world.t9  02_ternary_logic.t9  03_smart_home.t9  04_medical_diagnosis.t9  05_investment_advisor.t9  06_industrial_monitor.t9  07_harmony_calculator.t9  08_consensus_voting.t9  09_ai_decision.t9  10_fault_tolerance.t9  11_credit_scoring.t9  12_math_functions.t9  13_fibonacci_369.t9  14_scientific_calculator.t9  15_toroidal_database.t9  16_ternary_emulator.t9
src/: analyzer.cpp  analyzer.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  semantics.cpp  semantics.hpp  token.cpp  token.hpp  tree.cpp  tree.hpp
